log
Sun 30 Apr 2023 07:15:58 PM UTC: 
 tests:  0|5
total_score: 0/70
97e1234
Sun 30 Apr 2023 07:53:11 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
60ccffe
Sun 30 Apr 2023 07:58:51 PM UTC: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:9: error: variable ‘indicador’ set but not used [-Werror=unused-but-set-variable]
   54 |     int indicador;
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cba46b6
Sun 30 Apr 2023 07:59:02 PM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|5
total_score: 0/70
1b3d4f0
Sun 30 Apr 2023 07:59:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b035b35
Sun 30 Apr 2023 07:59:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
79f51d5
